// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render PropTypes.arrayOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <_class>
          string[]
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.arrayOf(PropTypes.shape) 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="foos"
        />
      </td>
      <td>
        <_class>
          shape[]
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <_class>
                bar
              </_class>
              : 
              <_class>
                number
              </_class>
            </div>
            <div>
              <_class>
                baz
              </_class>
              : 
              <_class>
                any
              </_class>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.instanceOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="num"
        />
      </td>
      <td>
        <_class>
          Number
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.objectOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <_class>
          {string}
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.objectOf(PropTypes.shape) 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="colors"
        />
      </td>
      <td>
        <_class>
          {shape}
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <_class>
                bar
              </_class>
              : 
              <_class>
                number
              </_class>
               — 
              <span>
                Required
              </span>
            </div>
            <div>
              <_class>
                baz
              </_class>
              : 
              <_class>
                any
              </_class>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.oneOf 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="size"
        />
      </td>
      <td>
        <_class>
          enum
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <span>
              One of: 
              <Group
                inline={true}
                separator=", "
              >
                <_class>
                  small
                </_class>
                <_class>
                  normal
                </_class>
                <_class>
                  large
                </_class>
              </Group>
            </span>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.oneOfType 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="union"
        />
      </td>
      <td>
        <_class>
          union
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <span>
              One of type: 
              <Group
                inline={true}
                separator=", "
              >
                <_class>
                  string
                </_class>
                <_class>
                  number
                </_class>
              </Group>
            </span>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.shape 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="foo"
        />
      </td>
      <td>
        <_class>
          shape
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <_class>
                bar
              </_class>
              : 
              <_class>
                number
              </_class>
               — 
              <span>
                Required
              </span>
            </div>
            <div>
              <_class>
                baz
              </_class>
              : 
              <_class>
                any
              </_class>
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.shape with description 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="foo"
        />
      </td>
      <td>
        <_class>
          shape
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <div>
            <div>
              <_class>
                bar
              </_class>
              : 
              <_class>
                number
              </_class>
               — 
              <span>
                Required
              </span>
               — 
              <_class
                inline={true}
                text="Number"
              />
            </div>
            <div>
              <_class>
                baz
              </_class>
              : 
              <_class>
                any
              </_class>
               — 
              <_class
                inline={true}
                text="Any"
              />
            </div>
          </div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string with a default value 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td>
        <_class>
          pink
        </_class>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render PropTypes.string.isRequired 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td>
        <span>
          Required
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render arguments from JsDoc tags 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="size"
        />
      </td>
      <td>
        <_class>
          number
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <_class
            text="Test description"
          />
          <JsDoc
            arg={
              Array [
                Object {
                  "description": "Converts foo to bar",
                  "name": "Foo",
                  "type": Object {
                    "name": "Array",
                  },
                },
              ]
            }
            param={
              Array [
                Object {
                  "name": "Bar",
                },
              ]
            }
          />
          <div>
            <h4>
              Arguments
            </h4>
            <_class
              args={
                Array [
                  Object {
                    "description": "Converts foo to bar",
                    "name": "Foo",
                    "type": Object {
                      "name": "Array",
                    },
                  },
                  Object {
                    "name": "Bar",
                  },
                ]
              }
            />
          </div>
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render description in Markdown 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <_class>
          string
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <_class
            text="Label"
          />
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render function body in tooltip 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="fn"
        />
      </td>
      <td>
        <_class>
          func
        </_class>
      </td>
      <td>
        <span
          title="(e) => console.log(e)"
        >
          Function
        </span>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render name as deprecated when tag deprecated is present 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={true}
          name="size"
        />
      </td>
      <td>
        <_class>
          number
        </_class>
      </td>
      <td />
      <td
        className="undefined undefined"
      >
        <div>
          <_class
            text="Test description"
          />
          <JsDoc
            deprecated={
              Array [
                Object {
                  "description": "Do not use.",
                  "title": "deprecated",
                },
              ]
            }
          />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`should render unknown proptype for a prop when a relevant proptype is not assigned 1`] = `
<table>
  <thead>
    <tr>
      <th>
        Name
      </th>
      <th>
        Type
      </th>
      <th>
        Default
      </th>
      <th
        className="undefined undefined"
      >
        Description
      </th>
    </tr>
  </thead>
  <tbody>
    <tr>
      <td>
        <_class
          deprecated={false}
          name="color"
        />
      </td>
      <td>
        <_class>
          unknown
        </_class>
      </td>
      <td>
        <_class>
          pink
        </_class>
      </td>
      <td
        className="undefined undefined"
      >
        <div>
          <JsDoc />
        </div>
      </td>
    </tr>
  </tbody>
</table>
`;
